--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -1,52 +1,74 @@
-<html>
-
-<hmtl xmlns:th="http://thymeleaf.org"
-xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-
+<!DOCTYPE html>
+<html xmlns:th="http://thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-      <!--Import Google Icon Font-->
+	<title>EventosApp</title>
+	 <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
 
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-
+      
+      <link rel="stylesheet" href="style/styleCss.css"/>
+</head>
 <body>
-<h1>Lista de Eventos</h1>
-<a href="/eventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle</i>Lista de Eventos</a>
 
-	<div th:each="evento: ${evento}" class="container">
+	<header>
+		<nav class="menu">
+		    <div class="nav-wrapper">
+		      <a href="#" class="brand-logo">Evento</a>
+		      <ul id="nav-mobile" class="right hide-on-med-and-down">
+		        <li><a href="/listaEventos" class="waves-effect waves-light btn"><i class="material-icons left">add_circle_outline</i>Lista de evento</a></li>
+		      </ul>
+		    </div>
+		</nav>
+	</header>
+	<br>
+	<br>
+	
+	<div th:each="evento : ${evento}" class="container detalhesEvento">
+	<h5>Detalhes do Evento</h5>
 		<div class="row">
 			<p>Nome: <span th:text="${evento.nome}"></span></p>
 			<p>Local: <span th:text="${evento.local}"></span></p>
 			<p>Data: <span th:text="${evento.data}"></span></p>
-			<p>Horário: <span th:text="${evento.horario}"></span></p>
-		</div>
-	
-	</div>
-	
-	<form class="container" method="post">
-		Nome: <input type="text" value="" name="nomeConvidado"></input>
-		RG: <input type="text" value="" name="rg"></input>
-		<a  type="submit" href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">cloud_upload</i>Salvar</a>
-	</form>
-	
-	<h5>Lista de Convidados</h5>
-	
-	<div class="container" th:eatc="convidado: ${convidados}">
-		<div class="row">
-			<div class="inout-field col s6">
-				<p><span th:text="${convidado.nomeConvidado}"></span></p>
-			</div>
-			<div class="inout-field col s3">
-				<p><span th:text="${convidado.rg}"></span></p>
-			</div>
+			<p>Horario: <span th:text="${evento.horario}"></span></p>
 		</div>
 	</div>
-			
-<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+	
+		 <th:block th:include="mensagemValidacao"></th:block>
+		<div class="container formConvidado">
+		<form method="post" th:object="${convidado}">
+			Nome: <input type="text" value="" name="nomeConvidado" placeholder="Nome Completo"/>
+			Rg: <input type="text" value="" name="rg" placeholder="AA-00.000.000" class="validate"/>
+			<button class="waves-effect waves-light btn" type="submit">Adicionar</button>
+		</form>
+		</div>
+
+	<table class="container tabelaConvidado">
+		<thead>
+			<tr>
+				<th>Nome Convidado</th>
+				<th>RG</th>
+				<th>Deletar</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="convidado : ${convidados}">
+				<td><span th:text="${convidado.nomeConvidado}"></span></td>
+				<td><span th:text="${convidado.rg}"></span></td>
+				<td><a class="waves-effect waves-light btn-small" th:href="${(#mvc.url('EC#deletarConvidado').arg(0, convidado.rg)).build()}"><i class="material-icons left">delete</i></a></td>
+			</tr>
+		</tbody>
+	</table>
+	
+
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+
 </body>
+
 
 </html>
