--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,32 +8,52 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css"  media="screen,projection"/>
-
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+      <link rel="stylesheet" href="style/styleCss.css"/>
     </head>
 
 <body>
-<h1>Lista de Eventos</h1>
-<a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle</i>Cadastrar Eventos</a>
-			<table class="container">
-			<thead>
-				<tr>
-					<th>Nome</th>
-					<th>Local</th>
-					<th>Data</th>
-					<th>Horário</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="evento: ${eventos}">
-						<td><a th:href="${(#mvc.url('EC#detalhesEvento').arg(0, evento.codigo)).build()}"><span th:text="${evento.nome}"></span></a></td>
-						<td><span th:text="${evento.local}"></span></td>
-						<td><span th:text="${evento.data}"></span></td>
-						<td><span th:text="${evento.horario}"></span></td>
-				</tr>
-			</tbody>
-			</table>
+
+	<header>
+		<nav class="menu">
+		    <div class="nav-wrapper">
+		      <a href="#" class="brand-logo" id="titulo">Controle de Eventos</a>
+		      <ul id="nav-mobile" class="right hide-on-med-and-down">
+		        <li><a href="/cadastrarEvento" class="waves-effect waves-light btn"><i class="material-icons left">add_circle</i>Cadastrar Eventos</a></li>
+		      </ul>
+		    </div>
+		  </nav>
+	</header>
+	
+	<main>
+	
+			<div class="row">
+		    <div class="col s12 m6">
+		      <div class="card blue-grey darken-1">
+		        <div class="card-content white-text">
+		          <span class="card-title">Card Title</span>
+		          <p>I am a very simple card. I am good at containing small bits of information.
+		          I am convenient because I require little markup to use effectively.</p>
+		        </div>
+		        <div class="card-action">
+		          <a href="#">This is a link</a>
+		          <a href="#">This is a link</a>
+		        </div>
+		      </div>
+		    </div>
+		  </div>
+  
+  </main>
+  
+ 		 <footer class="page-footer">
+	          <div class="footer-copyright">
+	            <div class="container">
+	            © 2014 Copyright Text
+	            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+	            </div>
+	          </div>
+        </footer>
 <script type="text/javascript" src="materialize/js/materialize.min.js"></script>
 </body>
 
